Add Web Scraping

--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -2,61 +2,160 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "0c5c222b",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!conda init\n",
-    "#!conda activate hackathon-challenge\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "5db7de72",
-   "metadata": {},
    "outputs": [
     {
-     "ename": "PickleError",
-     "evalue": "Incompatible checksums (82904607 vs 0xd555cb8 = (_dtype, _ndarray))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mPickleError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_pickle\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mgithub_issues.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcompression\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43minfer\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mloc[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpr\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124missue\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m df\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/io/pickle.py:205\u001b[0m, in \u001b[0;36mread_pickle\u001b[0;34m(filepath_or_buffer, compression, storage_options)\u001b[0m\n\u001b[1;32m    202\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m warnings\u001b[38;5;241m.\u001b[39mcatch_warnings(record\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m    203\u001b[0m         \u001b[38;5;66;03m# We want to silence any warnings about, e.g. moved modules.\u001b[39;00m\n\u001b[1;32m    204\u001b[0m         warnings\u001b[38;5;241m.\u001b[39msimplefilter(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;167;01mWarning\u001b[39;00m)\n\u001b[0;32m--> 205\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhandles\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhandle\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    206\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m excs_to_catch:\n\u001b[1;32m    207\u001b[0m     \u001b[38;5;66;03m# e.g.\u001b[39;00m\n\u001b[1;32m    208\u001b[0m     \u001b[38;5;66;03m#  \"No module named 'pandas.core.sparse.series'\"\u001b[39;00m\n\u001b[1;32m    209\u001b[0m     \u001b[38;5;66;03m#  \"Can't get attribute '__nat_unpickle' on <module 'pandas._libs.tslib\"\u001b[39;00m\n\u001b[1;32m    210\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pc\u001b[38;5;241m.\u001b[39mload(handles\u001b[38;5;241m.\u001b[39mhandle, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "File \u001b[0;32mstringsource:6\u001b[0m, in \u001b[0;36mpandas._libs.arrays.__pyx_unpickle_NDArrayBacked\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mPickleError\u001b[0m: Incompatible checksums (82904607 vs 0xd555cb8 = (_dtype, _ndarray))"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Body</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Controlling AC load with two mosfets and 1ED31...</td>\n",
+       "      <td>Hi,I am investigating the possibility of contr...</td>\n",
+       "      <td>May4,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Three Phase Sine Wave Power Supply using CIPOS...</td>\n",
+       "      <td>Hi all,I am an Embedded Engineer and I am look...</td>\n",
+       "      <td>May4,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hello nice to see you all today eggsoil\\n\\n\\n ...</td>\n",
+       "      <td>hello nice to see you all today eggsoil\\nhttps...</td>\n",
+       "      <td>May4,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Encountering Issues with Programming and Debug...</td>\n",
+       "      <td>Translated Content:\\nBoard Model: Psoc6-evalua...</td>\n",
+       "      <td>May4,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>使用PSoc 62系列板卡时遇到了无法烧录和调试的问题，似乎是flash的问题</td>\n",
+       "      <td>我的板卡型号是Psoc6-evaluationkit-062S2，在我按下板卡上的MODE按...</td>\n",
+       "      <td>May4,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Question of Angel PLL observer (MOTIX FOC)</td>\n",
+       "      <td>Hi all, I met some questions when I worked wit...</td>\n",
+       "      <td>May3,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>我有一些问题请教你</td>\n",
+       "      <td>Hello,I have a CYUSBKIT-003 board and I am stu...</td>\n",
+       "      <td>May3,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Unlock the thread\\n\\n\\n            Solved</td>\n",
+       "      <td>May I have my recent thread unlocked. I need s...</td>\n",
+       "      <td>May3,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PSoC6 CY8CPROTO-063</td>\n",
+       "      <td>Hello, good afternoon, I am going to work on a...</td>\n",
+       "      <td>May3,2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Project Creator Stuck at 'choose BSP' windows</td>\n",
+       "      <td>The window is stuck here and the next button i...</td>\n",
+       "      <td>May3,2024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Title  \\\n",
+       "0  Controlling AC load with two mosfets and 1ED31...   \n",
+       "1  Three Phase Sine Wave Power Supply using CIPOS...   \n",
+       "2  hello nice to see you all today eggsoil\\n\\n\\n ...   \n",
+       "3  Encountering Issues with Programming and Debug...   \n",
+       "4            使用PSoc 62系列板卡时遇到了无法烧录和调试的问题，似乎是flash的问题   \n",
+       "5         Question of Angel PLL observer (MOTIX FOC)   \n",
+       "6                                          我有一些问题请教你   \n",
+       "7          Unlock the thread\\n\\n\\n            Solved   \n",
+       "8                                PSoC6 CY8CPROTO-063   \n",
+       "9      Project Creator Stuck at 'choose BSP' windows   \n",
+       "\n",
+       "                                                Body       Time  \n",
+       "0  Hi,I am investigating the possibility of contr...  May4,2024  \n",
+       "1  Hi all,I am an Embedded Engineer and I am look...  May4,2024  \n",
+       "2  hello nice to see you all today eggsoil\\nhttps...  May4,2024  \n",
+       "3  Translated Content:\\nBoard Model: Psoc6-evalua...  May4,2024  \n",
+       "4  我的板卡型号是Psoc6-evaluationkit-062S2，在我按下板卡上的MODE按...  May4,2024  \n",
+       "5  Hi all, I met some questions when I worked wit...  May3,2024  \n",
+       "6  Hello,I have a CYUSBKIT-003 board and I am stu...  May3,2024  \n",
+       "7  May I have my recent thread unlocked. I need s...  May3,2024  \n",
+       "8  Hello, good afternoon, I am going to work on a...  May3,2024  \n",
+       "9  The window is stuck here and the next button i...  May3,2024  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_pickle('github_issues.pkl', compression='infer')\n",
-    "df = df.loc[df['pr'] == 'issue']\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "\n",
+    "html_text = requests.get('https://community.infineon.com/?profile.language=en').text\n",
+    "soup = BeautifulSoup(html_text, 'lxml')\n",
+    "\n",
+    "titles = soup.find_all('div', class_='subject')\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for index, title in enumerate(titles):\n",
+    "    # Find the body and time elements within the specific title\n",
+    "    body = title.find_next('div', class_='full-body body').text.strip()\n",
+    "    time = title.find_next('span', class_='time').text.strip().replace(' ', '')\n",
+    "\n",
+    "    data.append({\n",
+    "        'Title': title.text.strip(),\n",
+    "        'Body': body,\n",
+    "        'Time': time\n",
+    "    })\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Save DataFrame to CSV\n",
+    "df.to_csv('infineon_community.csv', index=False)\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "102724b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=0.17.1                      github_issues_test.pkl\r\n",
-      "Untitled.ipynb               llama-2-7b-chat.Q5_K_M.gguf\r\n",
-      "fetch_github_issues.py       llama_example.py\r\n",
-      "github_issues.pkl            read_issues.py\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls"
    ]
   },
   {
