Add Web Scraping

--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0c5c222b",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "9  The window is stuck here and the next button i...  May3,2024  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,11 +160,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9f5c20d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Types: 72 \n",
+      "\n",
+      "Type: \n",
+      "\n",
+      "PSoC™ 6\n",
+      "Wi-Fi Combo\n",
+      "Nor Flash\n",
+      "USB low-full-high speed peripherals\n",
+      "FIRST Robotics Competition (FRC)\n",
+      "MOSFET (Si/SiC)\n",
+      "Adapters and Chargers\n",
+      "RF Transistors\n",
+      "OPTIGA™ Trust\n",
+      "CIRRENT™ Product Analytics\n",
+      "AIROC™ Wi-Fi and Wi-Fi Bluetooth Combos\n",
+      "CO₂ sensor\n",
+      "Community Information\n",
+      "Studio Bluetooth\n",
+      "Clocks\n",
+      "Hyper Flash\n",
+      "Robotics\n",
+      "USB hosts hubs transceivers\n",
+      "OPTIGA™ TPM\n",
+      "3D Hall (Magnetic sensor)\n",
+      "CIRRENT™ Cloud ID\n",
+      "AIROC™ Wi-Fi MCUs\n",
+      "IGBT\n",
+      "PSoC™ 4\n",
+      "Smart Bluetooth\n",
+      "Other Technologies General\n",
+      "Hyper RAM\n",
+      "USB superspeed peripherals\n",
+      "ModusToolbox™\n",
+      "GaN\n",
+      "SECORA™ Blockchain\n",
+      "Antenna tuners\n",
+      "Switches (Magnetic sensors)\n",
+      "PSoC™ 5, 3 & 1\n",
+      "AIROC™ Bluetooth\n",
+      "Non Volatile RAM (F-RAM & NVSRAM)\n",
+      "USB EZ-PD™ Type-C\n",
+      "CIPURSE™\n",
+      "Low Noise Amplifiers\n",
+      "Diodes & Thyristors (Si/SiC)\n",
+      "Radar sensor\n",
+      "DAVE™\n",
+      "PSoC™ Creator & Designer\n",
+      "Specialty Memory\n",
+      "OPTIGA™ Connect\n",
+      "CAPSENSE™ & MagSense\n",
+      "RF Switches\n",
+      "Smart Power Switches\n",
+      "Angle (Magnetic sensor)\n",
+      "Code Examples\n",
+      "Wi-Fi Bluetooth for Linux\n",
+      "SRAM\n",
+      "Current (Magnetic sensor)\n",
+      "Gate Driver ICs\n",
+      "Community Translations\n",
+      "LED Driver ICs\n",
+      "MEMS microphones\n",
+      "AURIX™ Development Studio\n",
+      "Imagimob\n",
+      "Pressure Sensors\n",
+      "Intelligent Power Modules (IPM)\n",
+      "XMC™\n",
+      "Class D Audio Amplifier IC\n",
+      "AURIX™\n",
+      "TRAVEO™ T2G\n",
+      "Speed (Magnetic sensor)\n",
+      "Motor Control ICs\n",
+      "Power Management ICs\n",
+      "MOTIX™ MCU\n",
+      "Legacy microcontrollers\n",
+      "Battery Management ICs\n",
+      "Contactless power and sensing ICs\n"
+     ]
+    }
+   ],
+   "source": [
+    "options = soup.find_all('li', class_='options')\n",
+    "\n",
+    "print(f'Number of Types: {len(options)} \\n')\n",
+    "\n",
+    "print(f'Type: \\n')\n",
+    "for option in options:\n",
+    "    print(option.text.strip())"
+   ]
   },
   {
    "cell_type": "code",
