--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7c27791",
+   "id": "cc1a9490",
    "metadata": {},
    "source": [
     "# Web Scraping"
@@ -275,46 +275,58 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0044c8a6",
+   "id": "96cb3983",
    "metadata": {},
    "source": [
     "# Read Input Data"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "d746a1eb",
+   "cell_type": "markdown",
+   "id": "d8d0b16d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df1 = pd.read_csv('data/PSoC6.csv')\n",
-    "df2 = pd.read_csv('data/Wi-Fi Combo.csv')\n",
-    "df3 = pd.read_csv('data/Nor Flash.csv')"
+    "According to different product, we have different input data. To simplify, we use \"Instant Data Scraper\" chrome extension to do data scraping from the community website. (https://chromewebstore.google.com/detail/instant-data-scraper/ofaokhiedipichpaobibbnahnkdoiiah)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "26707ce8",
+   "execution_count": 56,
+   "id": "67ed5364",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, good afternoon, I am going to work on a parking lot model project, with CY8CPROTO-063-BLEpsoc6, Psoc creator 4.4, I have a model, a g99 servomo...\n"
+     "ename": "ParserError",
+     "evalue": "Error tokenizing data. C error: Expected 5 fields in line 3, saw 13\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [56]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m df2 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/Wi-Fi Combo.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m df3 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/Nor Flash.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m df4 \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata/USB low-full-high speed peripherals.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/util/_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) \u001b[38;5;241m>\u001b[39m num_allow_args:\n\u001b[1;32m    306\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[1;32m    307\u001b[0m         msg\u001b[38;5;241m.\u001b[39mformat(arguments\u001b[38;5;241m=\u001b[39marguments),\n\u001b[1;32m    308\u001b[0m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[1;32m    309\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39mstacklevel,\n\u001b[1;32m    310\u001b[0m     )\n\u001b[0;32m--> 311\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/readers.py:680\u001b[0m, in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    665\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[1;32m    666\u001b[0m     dialect,\n\u001b[1;32m    667\u001b[0m     delimiter,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    676\u001b[0m     defaults\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdelimiter\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[1;32m    677\u001b[0m )\n\u001b[1;32m    678\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[0;32m--> 680\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/readers.py:581\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    578\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n\u001b[1;32m    580\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m parser:\n\u001b[0;32m--> 581\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mparser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/readers.py:1254\u001b[0m, in \u001b[0;36mTextFileReader.read\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1252\u001b[0m nrows \u001b[38;5;241m=\u001b[39m validate_integer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnrows\u001b[39m\u001b[38;5;124m\"\u001b[39m, nrows)\n\u001b[1;32m   1253\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1254\u001b[0m     index, columns, col_dict \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1255\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1256\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/c_parser_wrapper.py:225\u001b[0m, in \u001b[0;36mCParserWrapper.read\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m    223\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    224\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlow_memory:\n\u001b[0;32m--> 225\u001b[0m         chunks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_reader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_low_memory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    226\u001b[0m         \u001b[38;5;66;03m# destructive to chunks\u001b[39;00m\n\u001b[1;32m    227\u001b[0m         data \u001b[38;5;241m=\u001b[39m _concatenate_chunks(chunks)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/_libs/parsers.pyx:805\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/_libs/parsers.pyx:861\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/_libs/parsers.pyx:847\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/pandas/_libs/parsers.pyx:1960\u001b[0m, in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: Expected 5 fields in line 3, saw 13\n"
      ]
     }
    ],
    "source": [
-    "df1.loc[1,'truncated-body']"
+    "df1 = pd.read_csv('data/PSoC6.csv')\n",
+    "df2 = pd.read_csv('data/Wi-Fi Combo.csv')\n",
+    "df3 = pd.read_csv('data/Nor Flash.csv')\n",
+    "df4 = pd.read_csv('data/USB low-full-high speed peripherals.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f1879c52",
+   "id": "6e0d8a2b",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6c736725",
+   "id": "c40ce132",
    "metadata": {},
    "outputs": [
     {
@@ -706,8 +718,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "923771f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject-link</th>\n",
+       "      <th>truncated-body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CY7C65215, configuration image CRC</td>\n",
+       "      <td>From a linux system, I want to read back the c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Arming of bulk/interrupt out endpoint in fx2lp</td>\n",
+       "      <td>Hello,I am stuck at a point,in my application ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pinout error on documentation of CY7C6514D</td>\n",
+       "      <td>Hi Infineon Community,\\nI am reviewing the sec...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CY7C65210 TID Number</td>\n",
+       "      <td>Hi,\\nWhat is CY7C65210 TID number?\\nBR\\nEason</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Setting up isochronous out endpoint in fx2lp</td>\n",
+       "      <td>Hello,Can someone point me to examples codes f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2729</th>\n",
+       "      <td>external RAM Selection for TC387</td>\n",
+       "      <td>We are looking for external RAM (around 2MB, p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2730</th>\n",
+       "      <td>Spice model incompatibility IMZA120R014M1H_L3</td>\n",
+       "      <td>Dear Infineon team,the spice model of the IMZA...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2731</th>\n",
+       "      <td>secure boot using slb9673</td>\n",
+       "      <td>Hi team, \\nwe are using the slb9673 tpm2 chip ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2732</th>\n",
+       "      <td>(SDK 1.3.5) No \"CyU3PDmaMultiChannelGetBuffer(...</td>\n",
+       "      <td>Dear Support\\n \\nAs KBA231382, if all buffers ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2733</th>\n",
+       "      <td>How fast can the FX3 transfer data in superspe...</td>\n",
+       "      <td>Dear all,         We've observed the speed abo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2734 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           subject-link  \\\n",
+       "0                    CY7C65215, configuration image CRC   \n",
+       "1        Arming of bulk/interrupt out endpoint in fx2lp   \n",
+       "2            Pinout error on documentation of CY7C6514D   \n",
+       "3                                  CY7C65210 TID Number   \n",
+       "4          Setting up isochronous out endpoint in fx2lp   \n",
+       "...                                                 ...   \n",
+       "2729                   external RAM Selection for TC387   \n",
+       "2730      Spice model incompatibility IMZA120R014M1H_L3   \n",
+       "2731                          secure boot using slb9673   \n",
+       "2732  (SDK 1.3.5) No \"CyU3PDmaMultiChannelGetBuffer(...   \n",
+       "2733  How fast can the FX3 transfer data in superspe...   \n",
+       "\n",
+       "                                         truncated-body  \n",
+       "0     From a linux system, I want to read back the c...  \n",
+       "1     Hello,I am stuck at a point,in my application ...  \n",
+       "2     Hi Infineon Community,\\nI am reviewing the sec...  \n",
+       "3         Hi,\\nWhat is CY7C65210 TID number?\\nBR\\nEason  \n",
+       "4     Hello,Can someone point me to examples codes f...  \n",
+       "...                                                 ...  \n",
+       "2729  We are looking for external RAM (around 2MB, p...  \n",
+       "2730  Dear Infineon team,the spice model of the IMZA...  \n",
+       "2731  Hi team, \\nwe are using the slb9673 tpm2 chip ...  \n",
+       "2732  Dear Support\\n \\nAs KBA231382, if all buffers ...  \n",
+       "2733  Dear all,         We've observed the speed abo...  \n",
+       "\n",
+       "[2734 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4.loc[:,['subject-link','truncated-body']] #USB low-full-high speed peripherals"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a62b91e9",
+   "id": "d00955de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -715,7 +858,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da76b42",
+   "id": "460a8174",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6240d1e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1e29338",
    "metadata": {},
    "outputs": [],
    "source": []
