Update Web Scraping

--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "id": "0c5c222b",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "      <th>Title</th>\n",
        "      <th>Body</th>\n",
        "      <th>Time</th>\n",
-       "      <th>fourm link</th>\n",
+       "      <th>forum link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -164,7 +164,7 @@
        "8  Hi all, I met some questions when I worked wit...  May3,2024   \n",
        "9  Hello,I have a CYUSBKIT-003 board and I am stu...  May3,2024   \n",
        "\n",
-       "                                          fourm link  \n",
+       "                                          forum link  \n",
        "0   https://community.infineon.com/t5/IGBT/bd-p/IGBT  \n",
        "1  https://community.infineon.com/t5/TRAVEO-T2G/b...  \n",
        "2  https://community.infineon.com/t5/AURIX/bd-p/A...  \n",
@@ -177,7 +177,7 @@
        "9  https://community.infineon.com/t5/USB-superspe...  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
     "        'Title': title,\n",
     "        'Body': body,\n",
     "        'Time': time,\n",
-    "        'fourm link': link\n",
+    "        'forum link': link\n",
     "    })\n",
     "\n",
     "df = pd.DataFrame(data)\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "9ecf26d5",
+   "id": "f85f2f22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad21faf3",
+   "id": "4541f5aa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13d889a1",
+   "id": "289420bd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264196b8",
+   "id": "b6e46b5d",
    "metadata": {},
    "outputs": [],
    "source": []
