Update Web Scraping

--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f20b6580",
+   "id": "9f4c1b86",
    "metadata": {},
    "source": [
     "# Extend our web scraping according to the product\n",
@@ -353,8 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "96daa0c0",
+   "execution_count": 18,
+   "id": "de2877ab",
    "metadata": {},
    "outputs": [
     {
@@ -421,182 +421,50 @@
        "      <td>Apr20,2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>IFCM20U65GD IPM module inexplicably shuts down...</td>\n",
-       "      <td>IFCM20U65GD IPM module has normal VFO pin, nor...</td>\n",
-       "      <td>Apr30,2024</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>95</th>\n",
        "      <td>IGBT</td>\n",
-       "      <td>Automotive Grade IGBT Module Reliability</td>\n",
-       "      <td>Hello, I didn't find any quality report about ...</td>\n",
-       "      <td>Apr26,2024</td>\n",
+       "      <td>英飞凌的IGBT模块有哪些电压电流等级？\\n\\n\\n            Solved</td>\n",
+       "      <td>I would like to ask the immersion cooling of t...</td>\n",
+       "      <td>Mar15,2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>96</th>\n",
        "      <td>IGBT</td>\n",
-       "      <td>IGBT model\\n\\n\\n            Solved</td>\n",
-       "      <td>您好，各位工程师，我们在测试3KW功率板的时候出现炸机问题，我们猜测是过电压或过电流导致，如...</td>\n",
-       "      <td>Apr27,2024</td>\n",
+       "      <td>Immersion cooling of IGBT\\n\\n\\n            Solved</td>\n",
+       "      <td>I would like to ask the immersion cooling of t...</td>\n",
+       "      <td>Mar15,2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>97</th>\n",
        "      <td>IGBT</td>\n",
-       "      <td>3KW炸机问题</td>\n",
-       "      <td>您好，各位工程师，我们在测试3KW功率板的时候出现炸机问题，我们猜测是过电压或过电流导致，如...</td>\n",
-       "      <td>Apr24,2024</td>\n",
+       "      <td>IPOSIM\\n\\n\\n            Solved</td>\n",
+       "      <td>Does loss in IPOSIM simulation results refer t...</td>\n",
+       "      <td>Mar12,2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>98</th>\n",
        "      <td>IGBT</td>\n",
-       "      <td>Eval-M1-CM610N3 评估板电源\\n\\n\\n            Solved</td>\n",
-       "      <td>hi\\n工程师\\nU2 D 和S直接之间的线宽我用的120mil, 四个S我也是用120mi...</td>\n",
-       "      <td>Apr17,2024</td>\n",
+       "      <td>Question about Safe Operating Area SOA in the ...</td>\n",
+       "      <td>Question: Taking Infineon IKW25T120 as an exam...</td>\n",
+       "      <td>Mar11,2024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>99</th>\n",
        "      <td>IGBT</td>\n",
-       "      <td>short-circuit oscillation</td>\n",
-       "      <td>What is the relationship between short-circuit...</td>\n",
-       "      <td>Apr25,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>IGBT HTRB 可靠性测试时结温Tvj=175°C怎么测量\\n\\n\\n         ...</td>\n",
-       "      <td>This is in regards to 1ED3124MC12H (https://ww...</td>\n",
-       "      <td>Apr26,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>Basic Gate Driver Questions</td>\n",
-       "      <td>This is in regards to 1ED3124MC12H (https://ww...</td>\n",
-       "      <td>Apr22,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>IGBT part number decoder - what do the letters...</td>\n",
-       "      <td>Where are the various types of IGBTs defined?\\...</td>\n",
-       "      <td>Apr26,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>FF3MR20KM1H forward bias safe operating area</td>\n",
-       "      <td>I am working on a wireless charger for electri...</td>\n",
-       "      <td>Apr23,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>igbt module\\n\\n\\n            Solved</td>\n",
-       "      <td>Good afternoon, would it be possible to replac...</td>\n",
-       "      <td>Apr24,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>Questions about the PressFit process\\n\\n\\n    ...</td>\n",
-       "      <td>Hello everyone, my board needs to use a SmartP...</td>\n",
-       "      <td>Apr23,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>IGBT动静态特性\\n\\n\\n            Solved</td>\n",
-       "      <td>您好， （1）目前的驱动芯片：1ED020I12-F2（2A），IGBT模块：FS3L50R...</td>\n",
-       "      <td>Apr23,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>三电平NPCIGBT功率模块选型推荐，及其对应的驱动芯片选型。\\n\\n\\n         ...</td>\n",
-       "      <td>您好， （1）目前的驱动芯片：1ED020I12-F2（2A），IGBT模块：FS3L50R...</td>\n",
-       "      <td>Apr18,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>Adapting Induction EVAL-kit to 400V 3-phase 16...</td>\n",
-       "      <td>We're working on several induction systems for...</td>\n",
-       "      <td>Apr17,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>Can the ground of the thermistor in FS3L40R07W...</td>\n",
-       "      <td>smartconx_target@Q!w2e3r4t5y6u7i8o9p0||/t5/IGB...</td>\n",
-       "      <td>Apr22,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>Basic Gate Driver Questions\\n\\n\\n            S...</td>\n",
-       "      <td>This is in regards to 1ED3124MC12H trying to d...</td>\n",
-       "      <td>Apr22,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>power simulation\\n\\n\\n            Solved</td>\n",
-       "      <td>Hey guys, the following topology is a DC/AC ap...</td>\n",
-       "      <td>Apr21,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>IGBT栅极驱动\\n\\n\\n            Solved</td>\n",
-       "      <td>您好：\\n         现在我们在用贵公司的1ED020I12-F2芯片，但是出现了一个...</td>\n",
-       "      <td>Apr18,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>SOA query on IGBT shutdown\\n\\n\\n            So...</td>\n",
-       "      <td>IGBT will cut off the high current when shutti...</td>\n",
-       "      <td>Apr17,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>驱动芯片发烫严重\\n\\n\\n            Solved</td>\n",
-       "      <td>给驱动芯片供电的DC-DC模块正常，IGBT模块是F3L200R12W2H3_B11，驱动芯...</td>\n",
-       "      <td>Apr16,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>External NTC position for sense temperature of...</td>\n",
-       "      <td>Dear community members\\nI need to measure the ...</td>\n",
-       "      <td>Apr16,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>Kit Hybridpack DSC S2 Software Updates\\n\\n\\n  ...</td>\n",
-       "      <td>Hi,\\nOur company recently bought a Hybrid Kit ...</td>\n",
-       "      <td>Apr10,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>What is the principle of the following topology</td>\n",
-       "      <td>Hydrogen production power supply front-end top...</td>\n",
-       "      <td>Apr15,2024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>IGBT</td>\n",
-       "      <td>Limitations on the maximum current of the SOA ...</td>\n",
-       "      <td>Recently we need to develop a batch of IGBT de...</td>\n",
-       "      <td>Apr14,2024</td>\n",
+       "      <td>IPOSIM\\n\\n\\n            Solved</td>\n",
+       "      <td>I am confusing the simulation results from the...</td>\n",
+       "      <td>Mar11,2024</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -606,31 +474,12 @@
        "2           IGBT        Question about Infineon’s Simulation Models   \n",
        "3           IGBT                                    Eval-M1-CM610N3   \n",
        "4           IGBT  IKCM30F60GD , what is the max output current @...   \n",
-       "5           IGBT  IFCM20U65GD IPM module inexplicably shuts down...   \n",
-       "6           IGBT           Automotive Grade IGBT Module Reliability   \n",
-       "7           IGBT                 IGBT model\\n\\n\\n            Solved   \n",
-       "8           IGBT                                            3KW炸机问题   \n",
-       "9           IGBT      Eval-M1-CM610N3 评估板电源\\n\\n\\n            Solved   \n",
-       "10          IGBT                          short-circuit oscillation   \n",
-       "11          IGBT  IGBT HTRB 可靠性测试时结温Tvj=175°C怎么测量\\n\\n\\n         ...   \n",
-       "12          IGBT                        Basic Gate Driver Questions   \n",
-       "13          IGBT  IGBT part number decoder - what do the letters...   \n",
-       "14          IGBT       FF3MR20KM1H forward bias safe operating area   \n",
-       "15          IGBT                igbt module\\n\\n\\n            Solved   \n",
-       "16          IGBT  Questions about the PressFit process\\n\\n\\n    ...   \n",
-       "17          IGBT                  IGBT动静态特性\\n\\n\\n            Solved   \n",
-       "18          IGBT  三电平NPCIGBT功率模块选型推荐，及其对应的驱动芯片选型。\\n\\n\\n         ...   \n",
-       "19          IGBT  Adapting Induction EVAL-kit to 400V 3-phase 16...   \n",
-       "20          IGBT  Can the ground of the thermistor in FS3L40R07W...   \n",
-       "21          IGBT  Basic Gate Driver Questions\\n\\n\\n            S...   \n",
-       "22          IGBT           power simulation\\n\\n\\n            Solved   \n",
-       "23          IGBT                   IGBT栅极驱动\\n\\n\\n            Solved   \n",
-       "24          IGBT  SOA query on IGBT shutdown\\n\\n\\n            So...   \n",
-       "25          IGBT                   驱动芯片发烫严重\\n\\n\\n            Solved   \n",
-       "26          IGBT  External NTC position for sense temperature of...   \n",
-       "27          IGBT  Kit Hybridpack DSC S2 Software Updates\\n\\n\\n  ...   \n",
-       "28          IGBT    What is the principle of the following topology   \n",
-       "29          IGBT  Limitations on the maximum current of the SOA ...   \n",
+       "..           ...                                                ...   \n",
+       "95          IGBT       英飞凌的IGBT模块有哪些电压电流等级？\\n\\n\\n            Solved   \n",
+       "96          IGBT  Immersion cooling of IGBT\\n\\n\\n            Solved   \n",
+       "97          IGBT                     IPOSIM\\n\\n\\n            Solved   \n",
+       "98          IGBT  Question about Safe Operating Area SOA in the ...   \n",
+       "99          IGBT                     IPOSIM\\n\\n\\n            Solved   \n",
        "\n",
        "                                                 Body        Time  \n",
        "0   Hello, \\nI am learning about all the infineon'...   May5,2024  \n",
@@ -638,34 +487,17 @@
        "2   Hello! I am trying to use the PLECS thermal mo...   May2,2024  \n",
        "3   Regarding the principle provided in the thread...  Apr30,2024  \n",
        "4   IFCM20U65GD IPM module has normal VFO pin, nor...  Apr20,2024  \n",
-       "5   IFCM20U65GD IPM module has normal VFO pin, nor...  Apr30,2024  \n",
-       "6   Hello, I didn't find any quality report about ...  Apr26,2024  \n",
-       "7   您好，各位工程师，我们在测试3KW功率板的时候出现炸机问题，我们猜测是过电压或过电流导致，如...  Apr27,2024  \n",
-       "8   您好，各位工程师，我们在测试3KW功率板的时候出现炸机问题，我们猜测是过电压或过电流导致，如...  Apr24,2024  \n",
-       "9   hi\\n工程师\\nU2 D 和S直接之间的线宽我用的120mil, 四个S我也是用120mi...  Apr17,2024  \n",
-       "10  What is the relationship between short-circuit...  Apr25,2024  \n",
-       "11  This is in regards to 1ED3124MC12H (https://ww...  Apr26,2024  \n",
-       "12  This is in regards to 1ED3124MC12H (https://ww...  Apr22,2024  \n",
-       "13  Where are the various types of IGBTs defined?\\...  Apr26,2024  \n",
-       "14  I am working on a wireless charger for electri...  Apr23,2024  \n",
-       "15  Good afternoon, would it be possible to replac...  Apr24,2024  \n",
-       "16  Hello everyone, my board needs to use a SmartP...  Apr23,2024  \n",
-       "17  您好， （1）目前的驱动芯片：1ED020I12-F2（2A），IGBT模块：FS3L50R...  Apr23,2024  \n",
-       "18  您好， （1）目前的驱动芯片：1ED020I12-F2（2A），IGBT模块：FS3L50R...  Apr18,2024  \n",
-       "19  We're working on several induction systems for...  Apr17,2024  \n",
-       "20  smartconx_target@Q!w2e3r4t5y6u7i8o9p0||/t5/IGB...  Apr22,2024  \n",
-       "21  This is in regards to 1ED3124MC12H trying to d...  Apr22,2024  \n",
-       "22  Hey guys, the following topology is a DC/AC ap...  Apr21,2024  \n",
-       "23  您好：\\n         现在我们在用贵公司的1ED020I12-F2芯片，但是出现了一个...  Apr18,2024  \n",
-       "24  IGBT will cut off the high current when shutti...  Apr17,2024  \n",
-       "25  给驱动芯片供电的DC-DC模块正常，IGBT模块是F3L200R12W2H3_B11，驱动芯...  Apr16,2024  \n",
-       "26  Dear community members\\nI need to measure the ...  Apr16,2024  \n",
-       "27  Hi,\\nOur company recently bought a Hybrid Kit ...  Apr10,2024  \n",
-       "28  Hydrogen production power supply front-end top...  Apr15,2024  \n",
-       "29  Recently we need to develop a batch of IGBT de...  Apr14,2024  "
+       "..                                                ...         ...  \n",
+       "95  I would like to ask the immersion cooling of t...  Mar15,2024  \n",
+       "96  I would like to ask the immersion cooling of t...  Mar15,2024  \n",
+       "97  Does loss in IPOSIM simulation results refer t...  Mar12,2024  \n",
+       "98  Question: Taking Infineon IKW25T120 as an exam...  Mar11,2024  \n",
+       "99  I am confusing the simulation results from the...  Mar11,2024  \n",
+       "\n",
+       "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +513,7 @@
     "data3 = []\n",
     "\n",
     "# Define the number of pages you want to scrape\n",
-    "num_pages = 3  # Modify this according to your requirements\n",
+    "num_pages = 10  # Modify this according to your requirements\n",
     "\n",
     "for page in range(num_pages):\n",
     "    if page == 0:\n",
@@ -712,13 +544,23 @@
     "\n",
     "# Create DataFrame\n",
     "df_IGBT = pd.DataFrame(data3)\n",
-    "df_IGBT\n"
+    "df_IGBT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e745b164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_IGBT.to_csv(\"data/IGBT.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d52228e2",
+   "id": "99b1b766",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -726,15 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f78635",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e068c13",
+   "id": "9a065fa8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -752,7 +586,7 @@
    "id": "9cb630be",
    "metadata": {},
    "source": [
-    "According to different product, we have different input data. To simplify the process, we could use \"Instant Data Scraper\" chrome extension to do data scraping from the community website. (https://chromewebstore.google.com/detail/instant-data-scraper/ofaokhiedipichpaobibbnahnkdoiiah)"
+    "According to different product, we have different input data. To simplify the process, alternatively, we could use \"Instant Data Scraper\" chrome extension to do data scraping from the community website. (https://chromewebstore.google.com/detail/instant-data-scraper/ofaokhiedipichpaobibbnahnkdoiiah)"
    ]
   },
   {
